# fALS_pub2025

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
notebooks/: anchor_phenotype_figures.ipynb  ml_imaging_figures.ipynb  ml_rna_imputation_figures.ipynb
src/fals/: analysis.py  config.py
src/fals/scripts/: README.md  anchor_phenotype_stats.py
src/fals/scripts/.redun/: redun.ini
src/fals/utils/: datasets.py  load.py  process.py  stats.py  viz.py
